src/assets/style/service/service-share.scss
$share_title: 2.714rem;
$share_image_height: 7.857rem;
$share_savebtn_height: 2.929rem;

.share {
  position: absolute;
  width: $share_width;
  height: 100%;
  overflow: hidden;
  background-color: $color_bg_sub;
  border-right: solid 1px rgba($color_text, 0.09);
}

.share-title {
  display: flex;
  flex-shrink: 0;
  width: 100%;
  height: $share_title;
  > li {
    flex: 1;
  }
}
.share-title__button {
  width: 100%;
  margin: auto;
  color: rgba($color_text, 0.5);
  font-size: 0.857rem;
  line-height: $share_title;
  text-align: center;
  background-color: #181818;
  &:hover,
  &:active {
    color: $color_text;
  }
  &.active {
    color: $color_text;
    background-color: transparent;
  }
}

.share-body {
  position: absolute;
  top: $share_title;
  flex-direction: column;
  width: 100%;
  height: calc(100% - #{$share_title});
  > .vue-scrollbar__wrapper {
    width: 100%;
    margin-bottom: 0;
  }
}
.share-body__file {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  > .vue-scrollbar__wrapper {
    width: 100%;
    height: 100%;
  }
  &.pdf {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    > .vue-scrollbar__wrapper {
      min-height: calc(100% - #{$share_title + $share_savebtn_height});
    }
  }
}

.share-body__history {
  display: flex;
  width: 100%;
  height: 100%;
  > .vue-scrollbar__wrapper {
    width: 100%;
    height: calc(100% - #{$share_title + $share_savebtn_height});
    transform: translate(-0.714rem, 0.714rem);
  }
}

.share-save.btn.small {
  position: absolute;
  bottom: 0;
  left: 0;
  flex: 0;
  flex-shrink: 0;
  width: calc(100% - 2rem);
  height: $share_savebtn_height;
  margin: 1rem;
  font-weight: normal;
  font-size: 0.857rem;
  background-color: $color_primary;

  > span {
    display: flex;
    width: fit-content;
    margin: auto;
    line-height: 1.429rem;
    &:before {
      display: inline-block;
      width: 1.429em;
      height: 1.429em;
      margin-right: 0.429em;
      background: url(~assets/image/call/ic_save_down.svg) center/100% no-repeat;
      content: "";
    }
  }

  &.disabled {
    background-color: #213d62;
  }
}

.upload-list {
  padding: 1.429rem;
  padding-left: 1.714rem;
  &.inner {
    padding-top: 0;
  }
  > li {
    position: relative;
    width: 100%;
  }
  > li:first-child {
    margin-top: 0;
  }
}

.upload-list__button {
  width: 100%;
  height: $share_image_height;
  background: url(~assets/image/call/ic-add-circle-outline.svg) center/2.857rem
    no-repeat #4c5259;
  opacity: 0.28;

  @include ir();
}

.sharing-image {
  position: relative;
  width: 100%;
  margin-top: 1.286rem;
  .sharing-image__remove {
    opacity: 0;
    transition: opacity 0.3s;
  }
  &:hover {
    .sharing-image__remove {
      opacity: 1;
    }
  }
}
.sharing-image__item {
  position: relative;
  width: 100%;
  height: $share_image_height;
  margin-bottom: 1.786rem;
  // overflow: hidden;
  &.pdf:after {
    position: absolute;
    right: 0.429rem;
    bottom: 0.429rem;
    width: 1.714rem;
    height: 1.714rem;
    background: url(~assets/image/img_pdf.png) center/100% no-repeat;
    content: "";
  }
  > img {
    max-width: 100%;
    max-height: 100%;
  }
  &.active {
    // pointer-events: none;
    &:before {
      position: absolute;
      top: -0.286rem;
      left: -0.286rem;
      width: calc(100% + 0.429rem);
      height: calc(100% + 0.429rem);
      border: solid 1px $color_primary;
      content: "";
    }
    > .sharing-image__item-active {
      display: block;
    }
    & + .sharing-image__remove {
      display: none;
    }
  }
  &.selected {
    &:before {
      position: absolute;
      top: -5px;
      left: -4px;
      width: calc(100% + 6px);
      height: calc(100% + 6px);
      background-color: rgba($color_primary, 0.4);
      border: solid 2px $color_primary;
      content: "";
    }
  }
}
.sharing-image__item-active {
  position: absolute;
  bottom: 0;
  left: 0;
  display: none;
  width: 100%;
  height: 2.143rem;
  color: $color_text;
  font-weight: 500;
  font-size: 1.071rem;
  background-color: rgba($color_primary, 0.8);
  & > p {
    display: inline-block;
    line-height: 100%;
    text-align: center;
    vertical-align: middle;
  }
}
.sharing-image__name {
  position: absolute;
  top: 7.857rem;
  z-index: 5;
  width: 100%;
  margin-top: 0.357rem;
  font-size: 1.071rem;
  line-height: 1.429rem;
  text-align: center;
  background: $color_bg_sub;
  @include ellipsis();
  transition: all 3s;
  &:hover {
    height: auto;
    white-space: pre-wrap;
    text-overflow: unset;
    line-break: anywhere;
  }
}

.sharing-image__remove {
  position: absolute;
  top: 0.214rem;
  right: 0.214rem;
  width: 1.571rem;
  height: 1.571rem;
  background: url(~assets/image/ic-close-w.svg) center/1.071rem no-repeat
    rgba(#2a2a2a, 0.7);
  border-radius: 50%;
  @include ir();
}

.sharing-image__loading {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  width: 100%;
  height: $share_image_height;
  background: rgba(#000, 0.5);
}
.loading-box {
  width: 60%;
  margin: auto;
}
.loading-box__title {
  font-weight: 500;
  font-size: 1.071rem;
  text-align: center;
}
.loading-box__progress {
  position: relative;
  width: 100%;
  height: 0.286rem;
  overflow: hidden;
  background: #f8f8f8;
  border-radius: 2px;
}
.loading-box__progress-bar {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background: $color_primary;
}
.loading-box__dash {
  font-size: 0.857rem;
  text-align: center;
}

.share-body__backbutton {
  flex: 0;
  width: calc(100% - 2.857rem);
  min-height: 2.143rem;
  margin: 1.429rem;
  > .tooltip .tooltiptext p {
    white-space: break-spaces;
  }
}
.share-body__backbutton-text {
  width: 100%;
  height: 2.143rem;
  padding: 0.357rem 0 0.357rem 2.286rem;
  font-weight: 500;
  font-size: 0.929rem;
  text-align: left;
  background: url(~assets/image/call/ic_back.svg) 0.429rem center/1.429rem
    no-repeat #38383a;
  @include ellipsis();
}

